[project]
name = "visuallogskeleton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "pm4py>=2.7.14.4",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "B", "A", "N", "ANN"]